# A2OogpGame

./: .gitignore  CMakeLists.txt  README.md  README.txt
include/: HelperFunctions.h  Music.h  Sfx.h  SoundFx.h
include/ai/: Ai.h  ChargeNode.h  Node.h  ShootAtTargetNode.h  ShootInCircleNode.h  ShootNode.h
include/entities/: Barrier.h  BarrierImage.h  BaseEnemy.h  Entity.h  MechaChad.h  Player.h
include/entities/barrier/: BarrierCollider.h  BarrierImage.h
include/entities/projectiles/: BaseProjectile.h  HexedProjectile.h  MomentumProjectile.h  RicochetProjectile.h  TrackingProjectile.h
include/hud/: HudElement.h  HudImage.h  HudText.h  LifeGauge.h  Timer.h
include/quad-tree/: QuadTree.h  QuadTreeHelpers.h  QuadTreeNode.h
include/state-machines/: GameState.h  MenuState.h  PauseState.h  StateMachine.h  StateMachineManager.h
include/state-machines/overlays/: DeathState.h  OverlayState.h  PauseState.h
include/state-machines/renderer/: Renderer.h
src/: HelperFunctions.cpp  HelperFunctions.h  Main.cpp  MenuState.cpp  MenuState.h  Music.cpp  Renderer.cpp  Renderer.h  Sfx.cpp  SoundFx.cpp  StateMachine.cpp  StateMachine.h  StateMachineManager.cpp  StateMachineManager.h
src/ai/: Ai.cpp  ChargeNode.cpp  Node.cpp  ShootAtTargetNode.cpp  ShootInCircleNode.cpp  ShootNode.cpp
src/entities/: Barrier.cpp  BarrierImage.cpp  BaseEnemy.cpp  Entity.cpp  MechaChad.cpp  Player.cpp
src/entities/Barrier/: BarrierCollider.cpp  BarrierImage.cpp
src/entities/projectiles/: BaseProjectile.cpp  HexedProjectile.cpp  MomentumProjectile.cpp  RicochetProjectile.cpp  TrackingProjectile.cpp
src/hud/: HudElement.cpp  HudImage.cpp  HudText.cpp  LifeGauge.cpp  Timer.cpp
src/quad-tree/: QuadTreeHelpers.cpp
src/state-machines/: GameState.cpp  MenuState.cpp  PauseState.cpp  StateMachine.cpp  StateMachineManager.cpp
src/state-machines/overlays/: DeathState.cpp  OverlayState.cpp  PauseState.cpp
src/state-machines/renderer/: Renderer.cpp
